# everything-mobile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: ai-usage.md  anti-risk-control.md  plugin-guide.md
docs/superpowers/plans/: 2026-05-21-everything-mobile-v1.md  2026-06-01-douyin-like-xhs-douyin-reply.md  2026-06-01-fengkong-humanize-enhance.md  2026-06-01-xiaohongshu-publish-profile.md
src/mobilecli/: __init__.py  __main__.py  cli.py  envelope.py
tests/: conftest.py
tests/fixtures/: douyin-comments.xml  douyin-home.xml  douyin-profile.xml  getevent-touch.txt  kuaishou-comments.xml  kuaishou-profile.xml  kuaishou-search-feed.xml  kuaishou-search-grid.xml  xhs-comments.xml  xhs-profile.xml  xhs-search-page.xml
tests/integration/: test_douyin_engage.py  test_primitives.py  test_xhs_reply.py
tests/unit/: test_app_foreground.py  test_cli_dispatch.py  test_comments_select.py  test_device.py  test_douyin_comments.py  test_douyin_profile.py  test_envelope.py  test_governor.py  test_humanize.py  test_humanize_pace.py  test_kuaishou_close_popup.py  test_kuaishou_comments.py  test_kuaishou_open_guard.py  test_kuaishou_profile.py  test_kuaishou_search.py  test_linter.py  test_media_push.py  test_pacing.py  test_plugin.py  test_publish_shared.py  test_publish_verbs.py  test_screenshot_region.py  test_swipe_verb.py  test_touch_curved.py  test_touch_probe.py  test_ui_finders.py  test_xhs_comments.py  test_xhs_profile.py  test_xhs_publish_args.py  test_xml_parse.py
(+39 files in other folders)
